--- a/html/carpage.css
+++ b/html/carpage.css
@@ -150,7 +150,7 @@ width: 40%;
 }
 .para{
     font-size: 24px;
-    color: white;
+    color: black;
     text-align: justify;
     padding: 80px;
     padding-top: 20px;
